<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>serial_link_interfaces</name>

    <version>0.0.0</version>

    <description>Definitions for custom messages, services, and actions.</description>

    <maintainer email="jonathan.woolfrey@gmail.com">woolfrey</maintainer>

    <license>GNU General Public Licence GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>

    <test_depend>ament_lint_common</test_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>

    <depend>geometry_msgs</depend>
    <depend>interactive_markers</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    
    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

</package>
