<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>serial_link_interfaces</name>
  <version>0.0.0</version>
  <description>Definitions for custom messages, services, and actions.</description>
  <maintainer email="jonathan.woolfrey@gmail.com">woolfrey</maintainer>
  <license>GPL-3.0-or-later</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Other dependencies -->
  <depend>interactive_markers</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export to specify build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- Marks this package as an interface package for ROSIDL -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>

